src/styles/global-styles.scss
.headerContainer {
  background: #fff;
  padding: 0;
  position: fixed;
  left: 0;
  width: 100%;
  box-shadow: 0px 0px 40px 0px rgba(82, 63, 105, 0.1);
  height: 80px;
  z-index: 999;
}
.headerWrapper {
  display: flex;
  align-items: flex-end;
  justify-content: space-evenly;
}
.menuWrapper {
  line-height: 64px;
  border-bottom: none;
}
.drawerIcon {
  font-size: 18;
  // padding: 0 24px;
  cursor: pointer;
  transition: color 0.3s;
}
.dropdownItem {
  font-size: 18px;
}
.flagIcon {
  height: 22px;
  width: 22px;
  border-radius: 4px;
}
.avatar {
  margin-left: 10px;
}
.ant-table {
  td {
    // white-space: nowrap;
  }
  th {
    // white-space: nowrap;
  }
}
.ant-input:disabled {
  background-color: #f7f8fa;
  color: black;
}
.ant-input-number-input:disabled {
  background-color: #f7f8fa;
  color: black;
}
.editable-cell {
  position: relative;
}

.editable-cell-value-wrap {
  padding: 0px 0px;
  margin: 0px;
  // cursor: pointer;
}
.ant-table-tbody {
  tr { 
    td {
      padding: 10px 5px;
    }
  }
}
.ant-table-th-yellow{
  background: rgb(250, 247, 187) !important;
}

.ant-switch {
  background: #52c41a;
}
.ant-switch-checked {
  background: #1890ff;
}

.has-error {
  .ant-form-explain {
      font-size: 12px;
  } 
}

.td-top {
  vertical-align: top;
}
th.td-top.ant-table-align-center.ant-table-row-cell-break-word {
  vertical-align: middle;
}

.ant-form-item-label {
  line-height: 20px;
}

@media (max-width: 480px) {
  .ant-steps-navigation{
  }
}

.link-nav-notif{
  :hover {
    background-color: red;
  }
}

.ant-list-bordered.ant-list-sm {
  .ant-list-item {
  padding-right: 0;
  padding-left: 0;
}
}

